# lyte-isaac-capture

./: .gitignore  README.md  pyproject.toml
scripts/: capture_anymal.py  capture_isaac.py
src/capture/: geometry.py  meta.py
tests/: test_geometry.py  test_meta.py
