[project]
name = "lyte-isaac-capture"
version = "0.1.0"
description = "Isaac Sim headless ANYmal capture — Lyte.ai prep"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
